# FA

./: .env  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  pytest.ini  requirements.txt  ruff.toml  setup.py
.github/workflows/: test.yml  unitest.yml
dataset/: .gitignore  dataset_infos.json  dataset_infos.yaml
dataset/eval_fixed_queries/: task_infos.json
dataset/example/: task_infos.json
dataset/flowbench/: task_infos.json  tools.txt
dataset/v240820/: apis.json
dataset/v241127/: task_infos.json
dataset/v241127_converted_ruled/: task_infos.json
dataset/v241127_converted_sonnet/: task_infos.json
dataset/v250102/: task_infos.json
doc/: ROADMAP.md  codenote.md  data.md  logs.md  thoughts.md
doc/archived/: engine.md
doc/cases/: multi-agent.jinja  prompting.md  single-agent.jinja
doc/components/: api.md  controllers.md  conversation_manager.md  db.md  role.md  ui.md  ui_conv.md
doc/docs/: PDL.md  run.md
doc/topics/: Front_Backend_sep.md
notebook/data_demo/: case.txt  huabu_fapiao.json  huabu_fapiao_final.json  huabu_fapiao_mamual.ipynb
notebook/process/: 01_preprocess_huabu_json.py  02_filter_huabu_json.py  04_parse_PDL.py  05_PDL_to_api.py  06_PDL_to_conversation.py
scripts/: 01_run_simulate_with_profile.py  02_collect_simulated.py  03_human_eval_postprocess.py  03_llm_eval.py  04_analysis.py  collect_simulated.py  collect_simulated_conversations.py  exp_01.sh  exp_02.sh  exp_03.sh  exp_04.sh  exp_05.sh  exp_06.sh  exp_07.sh  exps.sh  judge_util.py  run_simulate.py  run_simulate_v1.py  run_simulate_v2.py  run_simulate_with_profile.py  start_api.sh  start_api_server.sh  start_backend.sh  start_frontend.sh  start_pdl_agent_ui.sh  start_ui.sh  start_ui_exp.sh  sync.sh  utils.sh
scripts/data_utils/: convert_workflow_pdl.py
src/: main.py  main_v2.py  run_baseline.py  run_baseline_cli_check.py  run_baseline_eval.py  run_baseline_eval_one.py  run_baseline_ui.py  run_cli.py  run_cli_v1.py  run_cli_v2.py  run_demo_backend.py  run_demo_frontend.py  run_eval.py  run_flowagent.py  run_flowagent_ablation.py  run_flowagent_cli.py  run_flowagent_datacheck.py  run_flowagent_exp.py  run_flowagent_ui.py  run_flowagent_ui2.py  run_flowagent_ui_demo.py  run_flowagent_ui_exp.py  run_simulate.py  run_simulate_siqi.py  run_ui.py  simulate.py  start.sh  start_apis.sh  start_ui_deploy.sh  start_ui_dev.sh
src/.streamlit/: config.toml
src/api_server/: __init__.py  api_registry.py  config.yaml  main.py  mocker.py
src/apis/: 011.json  011.py
src/backend/: __init__.py  client.py  logging_config.py  main.py  main_mock_api.py  main_mock_llm.py  main_ui_backend.py  session_context.py
src/baselines/: __init__.py  common.py  data.py  main.py
src/common/: __init__.py  log.py  wrappers.py
src/configs/: .gitignore  cli.yaml  cli_dev.yaml  default.yaml  dev.yaml  fc.yaml  simulate.yaml  test.yaml  ui_deploy.yaml  ui_test.yaml
src/data/: __init__.py  data_handler.py  data_manager.py  role_outputs.py
src/engine/: __init__.py  common.py  controller.py  datamodel.py  entity_linker.py  main.py  pdl.py  role_api.py  role_bot.py  role_user.py  typings.py  user_profile.py
src/engine_v1/: agent.py  apis.py  bots.py  common.py  datamodel.py  interface.py  prompts.py
src/engine_v2/: __init__.py  common.py  controller.py  datamodel.py  main.py  pdl.py  pdl_v2.py  role_api.py  role_bot.py  role_user.py
src/eval/: analyzer.py  eval_utils.py  evaluator.py  fix_eval_results.py
src/fa/: __init__.py  entity_linker.py
src/fa_demo/: __init__.py  app.py
src/fa_eval/: run_exp_fixed_query.py
src/fa_server/: __init__.py  fastapi_app.py  main.py
src/flowagent/: __init__.py  main.py
src/frontend/: app.py  frontend_client.py  page_inspect.py  page_multi.py  page_single.py  util_frontend.py
src/json_tranformation/: 05_PDL_to_api.py  1_process_raw.py  2_llm_node_gen.py  3_llm_to_PDL.py
src/pdl/: typings.py
src/process/: common.py
src/scripts/: main_mock_api.py  main_mock_llm.py
src/simulator/: __init__.py  simulator.py  simulator_v1.py  simulator_v2.py  simulator_with_profile.py  useragent.py
src/tools/: __init__.py  tool_hunyuan_search.py  tool_math.py  tool_python_executor.py  tool_rapidapi.py
src/ui/: bot.py  bots.py  data.py  datamodel.py  interface.py  ui.py  ui_main.py  uid.py
src/utils/: wrappers.py
test/api_server/: test_mock_api.py  test_mock_llm.py  test_mocker.py
test/backend/: test_db.py  test_mock_api.py  test_mock_llm.py  test_typings.py  test_ui_backend.py  test_ui_backend_multi.py  test_ui_backend_single.py  test_ui_backend_st.py
test/common/: test_base_model.py  test_config.py  test_llm_client.py  test_logger.py
test/data/: test_data_handler.py  test_pdl.py  test_tool.py
test/data_utils/: pdl_autogen.py
test/engine_v1/: test_agent.py  test_apis.py
test/fa/: test_bot.py  test_controller.py  test_env.py  test_react_re.py  test_tool.py
test/fa_core/: conftest.py
test/fa_server/: test_db.py  test_session_context.py  test_typings.py  test_ui_backend_multi.py  test_ui_backend_single.py
test/flowagent/: test_controller.py  test_conv.py
test/test_easonsi/: test_client.py  test_formater.py
test/test_engine_v1/: test_agent.py  test_log.py  test_pdl.py
test/test_engine_v2/: test_api.py  test_conversation.py  test_logger.py  test_pdl.py  test_scorer.py  test_user.py
test/tools/: test_google.py  (+6 more)
(+630 files in other folders)
