[tool.poetry]
name = "flowagent"
version = "0.1.0"
description = "FlowAgent demo"
authors = ["easonsshi <easonsshi@tencent.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^1.51.2"
Jinja2 = "^3.1.4"
colorama = "^0.4.6"
pyyaml = "^6.0.2"
seaborn = "^0.13.2"
tabulate = "^0.9.0"
wandb = "^0.18.5"
langchain-community = "^0.3.9"
loguru = "^0.7.3"
pydantic = "^2.10.3"

[tool.poetry.group.dev.dependencies]
tencentcloud-sdk-python = "^3.0.1251"
jwcrypto = "^1.5.6"


[tool.poetry.group.backend.dependencies]
uvicorn = "^0.34.0"
fastapi = "^0.115.6"
python-engineio = "^4.10.1"
python-socketio = "^5.11.4"
pymongo = "^4.10.1"

[tool.poetry.group.frontend.dependencies]
streamlit = "^1.41.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"



[tool.ruff]
target-version = "py310"
line-length = 150
indent-width = 4

[tool.ruff.lint]
ignore = ["C408", "C901", "E501", "E731", "E741", "W605", "E701", "E401", "F541", "F841", "E402", "F401", "F403", "F405", "C403"]
# E701: Multiple statements on one line (colon)
# E401 [*] Multiple imports on one line
# F541 [*] f-string without any placeholders
# F841 Local variable `res` is assigned to but never used
# E402 Module level import not at top of file
# F401 `.api_registry.api_registry` imported but unused; consider removing, adding to `__all__`, or using a redundant alias
# F403 `from .api_definitions import *` used; unable to detect undefined names
# F405 `BaseNode` may be undefined, or defined from star imports
# C403 Unnecessary `list` comprehension (rewrite as a `set` comprehension)
select = ["C", "E", "F", "I", "W"]

[tool.ruff.lint.isort]
lines-after-imports = 2
known-first-party = ["common", "flowagent", "backend", "frontend"]
known-third-party = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
skip-magic-trailing-comma = false
line-ending = "auto"
